--- a/index.html
+++ b/index.html
@@ -5,5 +5,10 @@
     </head>
     <body>
         <h1>Saivivek Reddy, Kusukuntla</h1>
+        <h5>Finland</h5>
+        <p>Finland is a Northern European nation bordering Sweden, Norway and Russia.
+            Its capital, <b>Helsinki</b>, occupies a peninsula and surrounding islands in the <b>Baltic Sea</b>.
+            Helsinki is home to the 18th-century sea fortress Suomenlinna, the fashionable Design District and diverse museums.
+            The Northern Lights can be seen from the country's Arctic Lapland province, a vast wilderness with national parks and <b>ski resorts</b>.</p>
     </body>
 </html>
