--- a/index.html
+++ b/index.html
@@ -10,5 +10,25 @@
             Its capital, <b>Helsinki</b>, occupies a peninsula and surrounding islands in the <b>Baltic Sea</b>.
             Helsinki is home to the 18th-century sea fortress Suomenlinna, the fashionable Design District and diverse museums.
             The Northern Lights can be seen from the country's Arctic Lapland province, a vast wilderness with national parks and <b>ski resorts</b>.</p>
+        <hr>
+        <h2>Travel Directions for Finland</h2>
+        <ol>
+            <li> Very first and most thing to have is a Valid Passport.</li>
+            2. We have both ways to start the process.
+            By yourself
+By Travel Agent
+To avoide problems i suggest to gor for travel agents. Usually travel agents make the process haselfree.
+You will have to pay a consultation fee for further process with the travel agent.
+After making the payment he will start the procedure for VISA.
+Payment Process.
+1.Online.
+2. Offline.
+To make a visit to finland we need a pre-approved VISA by the grovernmnet of Finland.
+Visa may approve
+Visa may reject(it totally based on your performance)
+Travel agent will schedule a visa interview with the finland embassy for tourist VISA.
+After the VISA approval then READY GET SET GO
+I hope this information will be healpful. To get the more information i request you to take help from the internet.
+        </ol>
     </body>
 </html>
