Added ordered list

--- a/index.html
+++ b/index.html
@@ -14,21 +14,28 @@
         <h2>Travel Directions for Finland</h2>
         <ol>
             <li> Very first and most thing to have is a Valid Passport.</li>
-            2. We have both ways to start the process.
-            By yourself
-By Travel Agent
-To avoide problems i suggest to gor for travel agents. Usually travel agents make the process haselfree.
-You will have to pay a consultation fee for further process with the travel agent.
-After making the payment he will start the procedure for VISA.
-Payment Process.
-1.Online.
-2. Offline.
-To make a visit to finland we need a pre-approved VISA by the grovernmnet of Finland.
-Visa may approve
-Visa may reject(it totally based on your performance)
-Travel agent will schedule a visa interview with the finland embassy for tourist VISA.
-After the VISA approval then READY GET SET GO
-I hope this information will be healpful. To get the more information i request you to take help from the internet.
+            <li> We have both ways to start the process.</li>
+            <ol> 
+                <li>By yourself</li>
+                <li>By Travel Agent</li></ol>
+        <li>To avoide problems i suggest to gor for travel agents. Usually travel agents make the process haselfree.</li>
+        <li>You will have to pay a consultation fee for further process with the travel agent.</li>
+        <li>After making the payment he will start the procedure for VISA.</li>
+            <ol><li>Payment Process.</li></ol>
+                    <ol>
+                        <li>Online.</li>
+                        <li>Offline.</li>
+                    </ol>
+                 
+        <li>To make a visit to finland we need a pre-approved VISA by the grovernmnet of Finland.</li>
+        <ol>
+            <li>Visa may approve</li>
+            <li>Visa may reject(it totally based on your performance)</li>
+        </ol>
+
+        <li>Travel agent will schedule a visa interview with the finland embassy for tourist VISA.</li>
+        <li>After the VISA approval then READY GET SET GO</li>
+        <li>I hope this information will be healpful. To get the more information i request you to take help from the internet.</li>
         </ol>
     </body>
 </html>
