made some changes

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
         <li>To avoide problems i suggest to gor for travel agents. Usually travel agents make the process haselfree.</li>
         <li>You will have to pay a consultation fee for further process with the travel agent.</li>
         <li>After making the payment he will start the procedure for VISA.</li>
-            <ol><li>Payment Process.</li></ol>
+                <ol>
+                    <li>Payment Process.</li>
+                </ol>
                     <ol>
                         <li>Online.</li>
                         <li>Offline.</li>
@@ -37,5 +39,6 @@
         <li>After the VISA approval then READY GET SET GO</li>
         <li>I hope this information will be healpful. To get the more information i request you to take help from the internet.</li>
         </ol>
+
     </body>
 </html>
