added un-ordered list

--- a/index.html
+++ b/index.html
@@ -39,6 +39,21 @@
         <li>After the VISA approval then READY GET SET GO</li>
         <li>I hope this information will be healpful. To get the more information i request you to take help from the internet.</li>
         </ol>
-
+        <h2>Suggested Items for Travel</h2>
+            <ul>
+                <li>Multicurrency Travel Card.</li>
+                <li>Enough cloths for the tour.</li>
+                    <ul>
+                        <li>Cargo shots</li>
+                        <li>T-shirts..etc</li>
+                    </ul>
+                <li>GoPro Camera</li>
+                    <ul>
+                        <li>Drone (if there are no restrictions).</li>
+                        <li>DSLR Camera (For caputuring moments).</li>
+                    </ul>
+                <li>Valid mobile recharge plan to avoid interuptions.</li>
+            </ul>
+        <b>Please do refer travel diaries for better requirement</b>
     </body>
 </html>
