made changes to image

--- a/aboutme.html
+++ b/aboutme.html
@@ -20,7 +20,7 @@
              Subsequent re-imaginings of Iron Man have transitioned from Cold War motifs to contemporary matters of the time.
 
         </p>
-        <img src="ironman.jpg" height=”50” width=“100” alt="a picture of a ball" >
+        <img src="ironman.jpg" height="30" width="40" alt="Iron man" >
     </imgsrc>
     </body>
 </html>
