--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
                     </ul>
                 <li>Valid mobile recharge plan to avoid interuptions.</li>
             </ul>
-        <b>Please do refer travel diaries for better requirement</b>
+        <b>Please do refer travel diaries for better requirement<br></b>
+        
         <a href="file:///C:/Users/s544900/Desktop/webapps-repos/webapps-f21-assignment-3-vivekreddy764/aboutme.html" target="_blank">Visit Aboutme!</a>
     </body>
 </html>
