--- a/aboutme.html
+++ b/aboutme.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <titl>Aboutme File</titl>
+        <title>Aboutme File</title>
     </head>
     <body>
         <h1>Iron Man</h1>
@@ -20,7 +20,7 @@
              Subsequent re-imaginings of Iron Man have transitioned from Cold War motifs to contemporary matters of the time.
 
         </p>
-        <img src="ironman.jpg" height="400" width="600" alt="Iron man" >
+        <img src="ironman.jpg" height="200" width="600" alt="Iron man" >
     </imgsrc>
     </body>
 </html>
