--- a/index.html
+++ b/index.html
@@ -55,7 +55,44 @@
                 <li>Valid mobile recharge plan to avoid interuptions.</li>
             </ul>
         <b>Please do refer travel diaries for better requirement<br></b>
-        
+
         <a href="file:///C:/Users/s544900/Desktop/webapps-repos/webapps-f21-assignment-3-vivekreddy764/aboutme.html" target="_blank">Visit Aboutme!</a>
+
+        <hr>
+
+        <h2>Table for Foodie</h2>
+        <p>Some recipies are ment to be cooked.<br>
+            Here’s an example: Slow-cooked for eight hours, this intensely flavored and juicy lamb shank, infused with fresh rosemary and sage, is a house specialty.
+             Served with smooth mashed potatoes and char-grilled, crispy asparagus, topped with a tangy golden-brown glaze for a meal hard to forget.
+        </p>
+
+        <table>
+            <tr>
+              <th>Items</th>
+              <th>Location</th>
+              <th>Price</th>
+            </tr>
+            <tr>
+              <td>Biryani</td>
+              <td>Kansas city</td>
+              <td>$20</td>
+            </tr>
+            <tr>
+              <td>Hot white Mocha</td>
+              <td>Maryville</td>
+              <td>$10</td>
+            </tr>
+            <tr>
+                <td>hershey's Pie </td>
+                <td>Los Angles</td>
+                <td>$2</td>
+              </tr>
+              <tr>
+                <td>Black Coffee</td>
+                <td>Dallas</td>
+                <td>$5</td>
+              </tr>
+          </table>
+
     </body>
 </html>
