--- a/index.html
+++ b/index.html
@@ -65,7 +65,11 @@
             Here’s an example: Slow-cooked for eight hours, this intensely flavored and juicy lamb shank, infused with fresh rosemary and sage, is a house specialty.
              Served with smooth mashed potatoes and char-grilled, crispy asparagus, topped with a tangy golden-brown glaze for a meal hard to forget.
         </p>
-
+        <style>
+            table, th, td {
+              border:1px solid black;
+            }
+            </style>
         <table>
             <tr>
               <th>Items</th>
