--- a/index.html
+++ b/index.html
@@ -102,12 +102,12 @@
 
         <h2>Code display</h2>
         <h4>Algorithm</h4>
-        <q>We will run a series of DFS in the graph. 
+        <blockquote>We will run a series of DFS in the graph. 
             Initially all vertices are colored white (0). 
             From each unvisited (white) vertex, start the DFS, mark it gray (1) while entering and mark it black (2) on exit.
              If DFS moves to a gray vertex, then we have found a cycle (if the graph is undirected, the edge to parent is not considered). T
              he cycle itself can be reconstructed using parent array.
-        </q>
+        </blockquote>
         <pre>
             <code>
             int n;
