added colour to the code

--- a/index.html
+++ b/index.html
@@ -108,8 +108,18 @@
              If DFS moves to a gray vertex, then we have found a cycle (if the graph is undirected, the edge to parent is not considered). T
              he cycle itself can be reconstructed using parent array.
         </blockquote>
+        <style>
+            code {
+              font-family: Consolas,"courier new";
+              color: crimson;
+              background-color: #f1f1f1;
+              padding: 2px;
+              font-size: 105%;
+            }
+            </style>
         <pre>
             <code>
+                
             int n;
             vector(vector(int)) adj;
             vector(char) color;
