--- a/index.html
+++ b/index.html
@@ -117,9 +117,15 @@
               font-size: 105%;
             }
             </style>
+            div {
+                width: 320px;
+                padding: 10px;
+                border: 5px solid gray;
+                margin: 0;
+              }
         <pre>
             <code>
-                
+              <div>
             int n;
             vector(vector(int)) adj;
             vector(char) color;
@@ -169,6 +175,7 @@
         cout << endl;
     }
 }
+</div>
 </code>
  </pre>
         
