fixed link issue

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </ul>
         <b>Please do refer travel diaries for better requirement<br></b>
 
-        <a href="file:///C:/Users/s544900/Desktop/webapps-repos/webapps-f21-assignment-3-vivekreddy764/aboutme.html" target="_blank">Visit Aboutme!</a>
+        <a href="https://github.com/44-563-WebApps-F21/webapps-f21-assignment-3-vivekreddy764/blob/main/aboutme.html" target="_blank">Visit Aboutme!</a>
 
         <hr>
 
