fixed link redirecting issues

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <b>Please do refer travel diaries for better requirement<br></b>
 
         
-            <a href="aboutme.html" onclick="window.open('aboutme.html', '_blank');">
+            <a href="aboutme.html" onclick="window.open('aboutme.html', '_self');">
 
                 Example
               
