link issues fixed

--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
         <b>Please do refer travel diaries for better requirement<br></b>
 
         
-           <a href="aboutme.html" target="_blank">Visit Aboutme!</a> 
+           <a href="aboutme.html" target="_blank">Visit Aboutme!
+               
+           </a> 
 
         <hr>
 
