test quick link

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             Although using the Prüfer code for storing and operating on tree is impractical due the specification of the representation, the Prüfer codes are used frequently: mostly in solving combinatorial problems.
             The inventor - Heinz Prüfer - proposed this code in 1918 as a proof for Cayley's formula.
         </blockquote>
-        <a href="https://tinyurl.com/WEBA03"></a>
+        <a href="https://tinyurl.com/WEBA03">Quick Link</a>
         <style>
 
             div {
