added bonus link to the heading

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
         <title>LAB ASSIGNMENT-3</title>
     </head>
     <body>
+
+        <h3><a href="bonus.html" target="_blank">Visit Bonus page</a></h3>
+
         <h1>Saivivek Reddy, Kusukuntla</h1>
         <h5>Finland</h5>
         <p>Finland is a Northern European nation bordering Sweden, Norway and Russia.
@@ -110,7 +113,7 @@
             Although using the Prüfer code for storing and operating on tree is impractical due the specification of the representation, the Prüfer codes are used frequently: mostly in solving combinatorial problems.
             The inventor - Heinz Prüfer - proposed this code in 1918 as a proof for Cayley's formula.
         </blockquote>
-        <a href="https://tinyurl.com/WEBA03" target="_blank">Quick Link</a>
+        <a href="https://tinyurl.com/WEBA03" target="_blank">Quick Link</a> <br>
         
 
         <style>
