--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
             Remove x from the tree and add y to the Prufer Code
             Repeat above step 2 until we are left with two nodes.
         </blockquote>
-        <a href="https://tinyurl.com/WAPPSA03" target="_blank">Quick Link</a> <br>
+        <a href="https://tinyurl.com/WAPPSA03" target="_blank">Quick Link</a> 
         
-
+        <br>
         <style>
 
             div {
