--- a/bonus.html
+++ b/bonus.html
@@ -1,1 +1,9 @@
-<h2 style="color:#ff0000;">Ben Kingsley</h2>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>bonus.html</title>
+    </head>
+    <body>
+        <h2 style="color:#ff0000;">Ben Kingsley</h2>
+    </body>
+</html>
