--- a/bonus.html
+++ b/bonus.html
@@ -4,6 +4,6 @@
         <title>bonus.html</title>
     </head>
     <body>
-        <h2 style="color:#ff0000;">Ben Kingsley</h2>
+        <h2 style="color:#b30000;">katrina durden</h2>
     </body>
 </html>
