--- a/bonus.html
+++ b/bonus.html
@@ -4,7 +4,7 @@
         <title>bonus.html</title>
     </head>
     <body>
-        <h2 style="color:#b30000;">Katrina Durden<h4>(Kaecilius)</h4></h2>
+        <h2 style="color:#b30000;">Katrina Durden(Kaecilius)</h2>
 
     </body>
 </html>
