made some changes to the content

--- a/bonus.html
+++ b/bonus.html
@@ -7,10 +7,10 @@
         <h1 style="color:#b30000;">Katrina Durden(Kaecilius)</h1>
         <h3><b>Powers and Abilities</b></h3>
         <p style="color:#b30000;"><b>Master Sorcerer:</b> Noted as a brilliant student of the Ancient One, Kaecilius was one of the most powerful members of the Masters of the Mystic Arts, possessing a extraordinary mastery of the mystic arts and with the help of numerous mystical artifacts and relics, in addition to his astral powers, Kaecilius is able to gain access to a multitude of mystical powers.
-             His overall skill in magic proved to be great enough to hold his own against his mentor the Ancient One.
+             His overall skill in magic proved to be great enough to hold his own against his mentor the Ancient One.<br>
 
-            <b>Eldritch Magic Manipulation:</b> Kaecilius is able to create, shape and manipulate Eldritch Magic.
-            <b>Portal Creation</b>: Using a Sling Ring, Kaecilius is able to open a fiery portal to another location, gaining the ability to move tremendous distances instantaneously.
+            <b>Eldritch Magic Manipulation:</b> Kaecilius is able to create, shape and manipulate Eldritch Magic.<br>
+            <b>Portal Creation</b>: Using a Sling Ring, Kaecilius is able to open a fiery portal to another location, gaining the ability to move tremendous distances instantaneously.<br>
             <b>Interdimensional Travel:</b> Using the same Sling Ring, Kaecilius can travel between different dimensions and universes, crossing over different planes of existence or traveling across various forms of reality.</p>
     </body>
 </html>
