--- a/bonus.html
+++ b/bonus.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1 style="color:#b30000;">Katrina Durden(Kaecilius)</h1>
-        <h3><b>Powers and Abilities</b></h3>
+        <h3 style="color:#b30000;"><b>Powers and Abilities</b></h3>
         <p style="color:#b30000;"><b>Master Sorcerer:</b> Noted as a brilliant student of the Ancient One, Kaecilius was one of the most powerful members of the Masters of the Mystic Arts, possessing a extraordinary mastery of the mystic arts and with the help of numerous mystical artifacts and relics, in addition to his astral powers, Kaecilius is able to gain access to a multitude of mystical powers.
              His overall skill in magic proved to be great enough to hold his own against his mentor the Ancient One.<br>
 
