--- a/bonus.html
+++ b/bonus.html
@@ -11,6 +11,12 @@
 
             <b>Eldritch Magic Manipulation:</b> Kaecilius is able to create, shape and manipulate Eldritch Magic.<br>
             <b>Portal Creation</b>: Using a Sling Ring, Kaecilius is able to open a fiery portal to another location, gaining the ability to move tremendous distances instantaneously.<br>
-            <b>Interdimensional Travel:</b> Using the same Sling Ring, Kaecilius can travel between different dimensions and universes, crossing over different planes of existence or traveling across various forms of reality.</p>
+            <b>Interdimensional Travel:</b> Using the same Sling Ring, Kaecilius can travel between different dimensions and universes, crossing over different planes of existence or traveling across various forms of reality.<br>
+            <b>Dark Dimension Magic Manipulation:</b> After performing the ritual to tap into the powers of the Dark Dimension, Kaecilius was able to manipulate space. 
+            This allowed him to warp and twist the landscape of the Mirror Dimension and the New York Sanctum, conjure Space Shards as weapons, and defying gravity by running on walls and ceilings. 
+            He could also augment his strength and resilience with conscious effort, to the point where he could easily send someone flying with his attacks, and effortlessly lift up and toss Strange with one hand, and withstand being sent flying into a wall with Karl Mordo's Staff of the Living Tribunal. 
+            Notably, Kaecilius would use his power to send shockwaves through the ground to cause damage to his surroundings and disorient foes. With the combined effort of himself and the other Zealots, Kaecilius could create a large sphere of energy that when slammed to the floor, caused a powerful explosion that destroyed the London Sanctum, while leaving himself and his followers were unharmed. His connection to the dimension beyond time further allowed him to resist the effects of the Eye of Agamotto's magic, which was used by Doctor Strange to restore the Hong Kong Sanctum.
+            <b>Immortality:</b> Having obtained the power of the Dark Dimension from Dormammu, Kaecilius is immortal and cannot die, being a man beyond time. However, unlike the Ancient One, who was able to use the power of the Dark Dimension without being corrupted by Dormammu, Kaecilius himself was instead forced to live in eternal torment as a Mindless One, as a price to pay for obtaining the immortality from an extremely manipulative creature, despite getting what he wanted: eternal life as part of the one.
+        </p>
     </body>
 </html>
