added list of directions

--- a/bonus.html
+++ b/bonus.html
@@ -15,8 +15,16 @@
             <b>Dark Dimension Magic Manipulation:</b> After performing the ritual to tap into the powers of the Dark Dimension, Kaecilius was able to manipulate space. 
             This allowed him to warp and twist the landscape of the Mirror Dimension and the New York Sanctum, conjure Space Shards as weapons, and defying gravity by running on walls and ceilings. 
             He could also augment his strength and resilience with conscious effort, to the point where he could easily send someone flying with his attacks, and effortlessly lift up and toss Strange with one hand, and withstand being sent flying into a wall with Karl Mordo's Staff of the Living Tribunal. 
-            Notably, Kaecilius would use his power to send shockwaves through the ground to cause damage to his surroundings and disorient foes. With the combined effort of himself and the other Zealots, Kaecilius could create a large sphere of energy that when slammed to the floor, caused a powerful explosion that destroyed the London Sanctum, while leaving himself and his followers were unharmed. His connection to the dimension beyond time further allowed him to resist the effects of the Eye of Agamotto's magic, which was used by Doctor Strange to restore the Hong Kong Sanctum.
+            Notably, Kaecilius would use his power to send shockwaves through the ground to cause damage to his surroundings and disorient foes. With the combined effort of himself and the other Zealots, Kaecilius could create a large sphere of energy that when slammed to the floor, caused a powerful explosion that destroyed the London Sanctum, while leaving himself and his followers were unharmed. His connection to the dimension beyond time further allowed him to resist the effects of the Eye of Agamotto's magic, which was used by Doctor Strange to restore the Hong Kong Sanctum.<br>
             <b>Immortality:</b> Having obtained the power of the Dark Dimension from Dormammu, Kaecilius is immortal and cannot die, being a man beyond time. However, unlike the Ancient One, who was able to use the power of the Dark Dimension without being corrupted by Dormammu, Kaecilius himself was instead forced to live in eternal torment as a Mindless One, as a price to pay for obtaining the immortality from an extremely manipulative creature, despite getting what he wanted: eternal life as part of the one.
         </p>
+        <h4>Directions to Kaecilius</h4>
+        <ol>
+            <li>Dormammu is a primordial inter-dimensional entity who wields apocalyptic levels of supernatural power and is the ruler of the Dark Dimension.</li>
+            <li>Dormammu convinced Kaecilius to use his power to destroy the Masters of the Mystic Arts and bring the Dark Dimension to Earth.</li>
+            <li>Start a endless time loop until he agreed to leave Earth.</li>
+            <li> He and Odin play chess to determine the fate of the Universe, but the games end in a stalemate to maintain the balance between Chaos and Order.</li>
+            <li>Dormammu was able to manipulate Kaecilius and the other Zealots into doing his bidding by promising them all peace without end, which they all desired.</li>
+        </ol>
     </body>
 </html>
