--- a/bonus.html
+++ b/bonus.html
@@ -18,7 +18,7 @@
             Notably, Kaecilius would use his power to send shockwaves through the ground to cause damage to his surroundings and disorient foes. With the combined effort of himself and the other Zealots, Kaecilius could create a large sphere of energy that when slammed to the floor, caused a powerful explosion that destroyed the London Sanctum, while leaving himself and his followers were unharmed. His connection to the dimension beyond time further allowed him to resist the effects of the Eye of Agamotto's magic, which was used by Doctor Strange to restore the Hong Kong Sanctum.<br>
             <b>Immortality:</b> Having obtained the power of the Dark Dimension from Dormammu, Kaecilius is immortal and cannot die, being a man beyond time. However, unlike the Ancient One, who was able to use the power of the Dark Dimension without being corrupted by Dormammu, Kaecilius himself was instead forced to live in eternal torment as a Mindless One, as a price to pay for obtaining the immortality from an extremely manipulative creature, despite getting what he wanted: eternal life as part of the one.
         </p>
-        <h4>Directions to Kaecilius</h4>
+        <h4>Directions to Dormammu</h4>
         <ol>
             <li>Dormammu is a primordial inter-dimensional entity who wields apocalyptic levels of supernatural power and is the ruler of the Dark Dimension.</li>
             <li>Dormammu convinced Kaecilius to use his power to destroy the Masters of the Mystic Arts and bring the Dark Dimension to Earth.</li>
