--- a/bonus.html
+++ b/bonus.html
@@ -26,5 +26,7 @@
             <li> He and Odin play chess to determine the fate of the Universe, but the games end in a stalemate to maintain the balance between Chaos and Order.</li>
             <li>Dormammu was able to manipulate Kaecilius and the other Zealots into doing his bidding by promising them all peace without end, which they all desired.</li>
         </ol>
+
+        <img src="ironman.jpg" height="300" width="600" alt="Iron man" >
     </body>
 </html>
