--- a/bonus.html
+++ b/bonus.html
@@ -27,6 +27,6 @@
             <li>Dormammu was able to manipulate Kaecilius and the other Zealots into doing his bidding by promising them all peace without end, which they all desired.</li>
         </ol>
 
-        <img src="bonus.jpg" height="300" width="600" alt="Kaecilius" >
+        <img src="bonus2.jpg" height="300" width="600" alt="Kaecilius" >
     </body>
 </html>
