added link to the index.html

--- a/bonus.html
+++ b/bonus.html
@@ -28,5 +28,8 @@
         </ol>
 
         <img src="bonus2.jpg" height="300" width="600" alt="Kaecilius" >
+        <br>
+        <hr>
+        <a href="index.html" target="_self">Re-Direct to Index!</a> 
     </body>
 </html>
