--- a/bonus.html
+++ b/bonus.html
@@ -30,6 +30,6 @@
         <img src="bonus2.jpg" height="300" width="600" alt="Kaecilius" >
         <br>
         <hr>
-        <a href="index.html" target="_self">Re-Direct to Index!</a> 
+        <a href="index.html" target="_self"><h2>Re-Direct to Index!</h2></a> 
     </body>
 </html>
